# StroiBot

./: dev.txt  pyproject.toml  requirements.txt  telegram_bot.py  test_model.py  train.txt  train_dl_extractor.py
