[project]
name = "terminator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masud11", email = "masud.qadjiev@list.ru" }
]
dependencies = [
    "segeval>=2.0.11",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/terminator"]
